[package]
name = "gongcheck-editor"
version = "0.1.1"
edition = "2021"
description = "Rich text editor for WASM"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gloo = "0.11.0"
js-sys = "0.3.69"
pulldown-cmark = "0.11.0"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["InputEvent"]}
